# mmdetection3d

./: .gitignore  mm_pn2_cls.py  mm_pn2_sem.py  pc_util.py  ply_to_pcd.py  process_partnet_data.py  run_votenet_exp.py  test_dataset.py  tf_testcode.py  torch_testcode.py  visualize_partnet.py
ASIS_Exps/: generate_list.py  train_ASIS.sh
ASIS_Exps/data/: partnet_dataset.py
ASIS_Exps/network/: ASIS.py  ASIS_loss.py  ASIS_utils.py
ASIS_Exps/utils/: utils.py
Asis_Exp/network/: ASIS.py  partnet_baseline.py  pointnet2_utils.py  utils.py
CGAL_Python/: CMakeLists.txt  build_python_wheel.sh  install.sh  install_boost.sh  run_docker.sh  setup.py
CGAL_Python/src/: python_binding.cpp
configs/: ASIS_partnet_config.py  partnet_category.json  partnet_category_template.json  partnet_data_config.py  partnet_eval_eval_data_config.py  partnet_eval_train_data_config.py  votenet_partnet_config.py  votenet_partnet_eval_config.py
configs/data/: partnet_eval_eval_data_config.py  partnet_eval_train_data_config.py  partnet_train_data_config.py
configs/merged/: train_template.py  votenet.py
configs/model/: ASIS.py  votenet.py
configs/schedules/: schedule_partnet.py
data/partnet/: load_partnet_data.py  partnet_utils.py  prepare_train_val_data.py  read_data.py
data/scannet/: load_scannet_data.py  scannet_utils.py
html_template/: one_pcd.html  table.html  two_pcd.html
network/: partnet_baseline.py  pointnet_utils.py  utils.py
scripts/: test_votenet.sh  test_votenet_template.sh  train_votenet.sh  train_votenet_template.sh
utils/: test.py  utils.py
(+35 files in other folders)
